fixed app width in tablet/desktop view and added inline margin to leaderboard container to prevent clipping

--- a/src/index.css
+++ b/src/index.css
@@ -229,7 +229,7 @@ body {
 }
 
 .leaderboard-container {
-  max-width: 100vw;
+  max-width: 95vw;
 }
 
 /* Utility Classes */
@@ -399,15 +399,9 @@ body {
 }
 
 @media (min-width: 400px) {
-  .game-container {
-    justify-content: center;
-  }
-
   .content-container {
-    min-width: 358px;
-    align-items: center;
-    justify-content: start;
-    max-width: 400px;
+    margin: 2rem auto;
+    width: 360px;
   }
 
   .gap-2 {
@@ -417,19 +411,12 @@ body {
     gap: 4rem;
   }
 
-  .game-grid {
-    margin-top: 2rem;
-  }
-
   .how-to-grid {
     max-width: 300px;
   }
 }
 
 @media (max-width: 380px) {
-  .leaderboard-container {
-    width: 100%;
-  }
   .game-subtitle-s {
     font-size: 1.35rem;
   }
